@@ -1,3 +1,9 @@
+2004-19-05  Muktha  <muktha.narayan@wipro.com>
+
+	* mime-type-info.c (get_icon_pixbuf): Avoid recursive call of this
+	function when the icon file is not found. Fixes file-types capplet
+	hang. Bug #142894.
+
 2003-06-10  Shailesh Mittal  <shailesh.mittal@wipro.com>
 
 	* libuuid/gen_uuid.c (get_node_id): Creating an IPv6 socket if AF_INET6
